# RF

./: .activate.sh  .deactivate.sh  .gitignore  .gitmodules  Dockerfile  FIR_filter.py  README.md  andsdr_test.py  antsdr_receive_1_channel.py  antsdr_receive_2_channels.py  docker-compose.yml  environment.yml  hackrf_send_1_channel.py  krakenReceiver.py  kraken_test.py  pluto_doa.py  pluto_peak.py  pluto_soapy.py  requirements.txt  start.sh  start_kraken.sh  start_pluto.sh
src/: HackRF_send.py  LiveSpectrogram.py  QtSpectrogram.py  andsdr_test.py  antsdr_receive_1_channel.py  antsdr_receive_2_channels.py  antsdr_transmmit.py  hack_rf.py  krakenReceiver.py  kraken_rtl_test.py  kraken_test.py  recording.sigmf-meta  waterfall_plot.py
src/antsdr/: andsdr_test.py  antsdr_receive_1_channel.py  antsdr_receive_2_channels.py
src/beamform/: 2_antenna_beamform.py
src/hackrf/: HackRF_send.py  hack_rf.py  hackrf_send_1_channel.py
src/kraken/: Dockerfile.kraken  config.py  config_star.py  config_tri.py  direction_estimation.py  environment.yml  kill.sh  krakenReceiver.py  kraken_heimdall.py  kraken_heimdall_star.py  kraken_heimdall_tri.py  kraken_rtl.py  kraken_rtl_test.py  kraken_soapy.py  shmemIface.py  simulate_doa.py  start_doa.sh  start_doa_star.sh  start_doa_tri.sh  stop_doa.sh  test_numba.py
src/krakensdr/: kraken_test.py
src/plutosdr/: Dockerfile.pluto  LiveSpectrogram.py  QtSpectrogram.py  README.md  agent.py  classes.py  environment.yml  main.py  pluto_beamforming.py  pluto_doa.py  pluto_soapy.py  (+3 more)
src/streamer/src/: main.c  meson.build  test.c  working_stream.c
(+44 files in other folders)
